--- a/static/components/tokenizing-text-field.less
+++ b/static/components/tokenizing-text-field.less
@@ -26,6 +26,7 @@
     border-radius: @border-radius-small;
     background-color: @background-color;
     position: absolute;
+    z-index: 2;
   }
 
   .content-container.empty {
